crates/server/tests/analysis/snapshots/r#mod__analysis__alpha050__two_generics_compared-2.snap
---
source: tests/analysis/alpha050.rs
expression: "symbol_table.symbols.iter().map(|(_, symbol_info)|\nsymbol_info.to_string(&generic_types)).collect::<Vec<String>>()"
---
[
    "fun max_value(a: Int | Num | Text | [Int | Num | Text], b: Int | Num | Text | [Int | Num | Text]): Int | Num | Text | [Int | Num | Text]",
    "a: Int | Num | Text | [Int | Num | Text]",
    "b: Int | Num | Text | [Int | Num | Text]",
    "a: Int | Num | Text | [Int | Num | Text]",
    "b: Int | Num | Text | [Int | Num | Text]",
    "a: Int | Num | Text | [Int | Num | Text]",
    "b: Int | Num | Text | [Int | Num | Text]",
]
