crates/server/tests/analysis/snapshots/r#mod__analysis__alpha050__two_generics_compared.snap
---
source: crates/server/tests/analysis/alpha050.rs
expression: symbol_table.symbols
---
{
    5..=14: SymbolInfo {
        name: "max_value",
        symbol_type: Function(
            FunctionSymbol {
                arguments: [
                    (
                        FunctionArgument {
                            name: "a",
                            data_type: Any,
                            is_optional: false,
                            default_value_type: None,
                            is_ref: false,
                        },
                        15..16,
                    ),
                    (
                        FunctionArgument {
                            name: "b",
                            data_type: Any,
                            is_optional: false,
                            default_value_type: None,
                            is_ref: false,
                        },
                        18..19,
                    ),
                ],
                is_public: false,
                compiler_flags: [],
                docs: None,
            },
        ),
        data_type: Any,
        is_definition: true,
        undefined: false,
        span: 5..14,
        contexts: [],
    },
    15..=16: SymbolInfo {
        name: "a",
        symbol_type: Variable(
            VariableSymbol {
                is_const: false,
                is_public: false,
            },
        ),
        data_type: Any,
        is_definition: true,
        undefined: false,
        span: 15..16,
        contexts: [],
    },
    18..=19: SymbolInfo {
        name: "b",
        symbol_type: Variable(
            VariableSymbol {
                is_const: false,
                is_public: false,
            },
        ),
        data_type: Any,
        is_definition: true,
        undefined: false,
        span: 18..19,
        contexts: [],
    },
    30..=31: SymbolInfo {
        name: "a",
        symbol_type: Variable(
            VariableSymbol {
                is_const: false,
                is_public: false,
            },
        ),
        data_type: Any,
        is_definition: false,
        undefined: false,
        span: 30..31,
        contexts: [
            Function(
                FunctionContext {
                    compiler_flags: [],
                },
            ),
        ],
    },
    34..=35: SymbolInfo {
        name: "b",
        symbol_type: Variable(
            VariableSymbol {
                is_const: false,
                is_public: false,
            },
        ),
        data_type: Any,
        is_definition: false,
        undefined: false,
        span: 34..35,
        contexts: [
            Function(
                FunctionContext {
                    compiler_flags: [],
                },
            ),
        ],
    },
    44..=45: SymbolInfo {
        name: "a",
        symbol_type: Variable(
            VariableSymbol {
                is_const: false,
                is_public: false,
            },
        ),
        data_type: Any,
        is_definition: false,
        undefined: false,
        span: 44..45,
        contexts: [
            Function(
                FunctionContext {
                    compiler_flags: [],
                },
            ),
        ],
    },
    57..=58: SymbolInfo {
        name: "b",
        symbol_type: Variable(
            VariableSymbol {
                is_const: false,
                is_public: false,
            },
        ),
        data_type: Any,
        is_definition: false,
        undefined: false,
        span: 57..58,
        contexts: [
            Function(
                FunctionContext {
                    compiler_flags: [],
                },
            ),
        ],
    },
}
