crates/server/tests/analysis/snapshots/r#mod__analysis__alpha050__unused_import.snap
---
source: crates/server/tests/analysis/alpha050.rs
expression: backend.files.unused_diagnostics
---
{
    (
        FileId(
            0,
        ),
        FileVersion(
            1,
        ),
    ): [
        (
            "Unused import \"unused_helper\"",
            18..31,
        ),
    ],
}
